--- a/loeng02/index.html
+++ b/loeng02/index.html
@@ -10,7 +10,8 @@
 
 <body>
     <h1>Tere tulemast Mihkli kodulehele</h1>
-    <a href="uudised.html">Lähme loeme uudiseid!</a>
+    <a href="vorm.html">Logi sisse</a><br>
+    <a href="uudised.html">Lähme loeme uudiseid</a>
 </body>
 
 </html>
