--- a/loeng04/kontakt.html
+++ b/loeng04/kontakt.html
@@ -26,10 +26,17 @@
         <a href="kontakt.html">Kontakt</a>
     </nav>
     <main>
-        <h2>Teenused</h2>
-        <p>
-            Pakume koertepesuteenuseid!
-        </p>
+        <h2>Kontakt</h2>
+        <form class="form">
+            <p type="Name:"><input placeholder="Nimi"></input>
+            </p>
+            <p type="Email:"><input placeholder="E-mail"></input>
+            </p>
+            <p type="Message:">
+                <input placeholder="Sõnum"></input>
+            </p>
+            <button>Saada sõnum</button>
+        </form>
     </main>
     <footer>
         <p>OÜ Koerte Värvimise Agentuur</p>
