--- a/matkaklubi/index.html
+++ b/matkaklubi/index.html
@@ -39,6 +39,33 @@
             <div class="pilt"></div>
         </div>
     </div>
+    <div class="teine">
+        <section class="ylemine">
+            <h3 class="hall">Choose</h3>
+            <h3>These Best Treks For Spring</h3>
+        </section>
+        <div class="alumine">
+            <div class="vasak">
+                <section>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Quis ipsum su spendisse ultrices gravida. Risus commodo viverra maec enas
+                    accumsan lacus vel facilisis.
+                </section>
+                <div class="nooled">
+                    <span class="vasak">←</span>
+                    <span class="lehekylg">01</span>
+                    <span class="kaldkriips">/</span>
+                    <span class="kokku-lehekylgi">06</span>
+                    <span class="parem">→</span>
+                </div>
+            </div>
+            <div class="parem">
+                <div class="pilt pilt1"></div>
+                <div class="pilt pilt2"></div>
+                <div class="pilt pilt3"></div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
