--- a/kodune09/index.html
+++ b/kodune09/index.html
@@ -14,18 +14,8 @@
 
 <body>
     <h1>Uudised</h1>
-    <div class="uudised">
-        <div class="uudis">
-            <img src="https://picsum.photos/250/150" />
-            <h3 class="pealkiri">Uudis 1</h3>
-            <div class="kokkuvote">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam pretium iaculis augue a ultricies.
-                Aenean at sodales leo. Donec fermentum neque eros, eget congue nunc lobortis quis.
-            </div>
-            <a href="uudis1.html">Loe edasi</a>
-        </div>
-    </div>
-    <script src="script.js"></script>
+    <div class="uudised"> </div>
+    <script src="script2.js"></script>
 </body>
 
 </html>
